# cli

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/plorth/cli/: config.hpp.in  terminal.hpp  utils.hpp
src/: api.cpp  main.cpp  repl.cpp  terminal.cpp  utils.cpp
